# shift_left_utils

./: .cursorrules  .editorconfig  .gitignore  404.html  CHANGELOG.md  Dockerfile  PLANNING.md  README.md  TASKS.md  build_and_release.sh  count_loc.sh  cursor_tools.json  docker-compose.yaml  extra.css  index.html  inventory.json  mkdocs.yml  modified_files.txt  openai_functions.json  pyrightconfig.json  requirements.txt  set_confluent_env  set_env  setup.sh  sitemap.xml  start-ollama.sh  synthetic_data_inserts.sql  test_set_env
src/flink-test-harness/: pyproject.toml
src/flink-test-harness/src/flink_test_harness/: a.py  cli.py  main.py
src/shift_left/: README.md  buildAllMetadata.sh  customer_analytics_c360_pipeline_graph.html  diagnose_mcp.sh  modified_flink_files.txt  pyproject.toml  pytest.ini  requirements.txt  runIntegrationTests.sh  runInventory.sh  runRegressionTests.sh  updateDoc.sh
src/shift_left/docs/: compute_pool_optimizer.md  integration_test.md
src/shift_left/shift_left/: cli.py
src/shift_left/shift_left/ai/: catalyst_to_flink.py  ksql_code_agent.py  process_src_tables.py  pyspark_extractor.py  spark_sql_code_agent.py  translator_to_flink_sql.py
src/shift_left/shift_left/cli_commands/: pipeline.py  project.py  rag.py  table.py
src/shift_left/shift_left/core/: compute_pool_mgr.py  deployment_mgr.py  field_lineage.py  metric_mgr.py  pipeline_mgr.py  project_manager.py  statement_mgr.py  table_analyzer.py  table_mgr.py  test_mgr.py
src/shift_left/shift_left_mcp/: README.md  command_builder.py  server.py  test_server.py  tools.py
src/shift_left/src/shift_left/: cli.py
src/shift_left/tests/: a.json  ut_templ.py
src/shift_left/tests/ai/: README.md  __init__.py  debug_ai.py  set_ollama.sh  set_qwen3.sh  test_agent_flow.py  test_all_ksql_migration.py  test_all_src_spark.py  test_catalyst_to_flink.py  test_dbt_migration.py  test_enhanced_spark_agent.py  test_first_ksql_migration.py  test_first_pyspark_migration.py  test_first_spark_migration.py  test_ksql_agent_flow.py  test_ksql_migration.py  test_migrate_cli_ksql.py  test_process_src_table.py  test_rag_corpus_loader.py  test_rag_prompt_augmentation.py  test_rate_limit.py  test_spark_migration.py  test_spark_migration_with_ccvalidate.py  test_ut_data_tuning.py  utilities.py
src/shift_left/tests/cli/: debug_some_thing.py  test_pipeline_cli.py  test_project_cli.py  test_table_cli.py
src/shift_left/tests/core/: a.json  debug_deployment_mgr.py  test_confluent_client.py  test_deployment_mgr.py  test_pipeline_mgr.py  test_pool_mgr.py  test_process_src_table.py  test_project_mgr.py  test_statement_mgr.py  test_table_mgr.py  test_table_worker.py  test_test_mgr.py
src/shift_left/tests/data/: README.md  compute_pools.txt
src/shift_left/tests/it/: BaseIT.py  CLI_IT_COVERAGE.md  README.md  conftest.py  debug_it.py  process_tables.py  test_compute_pool.py  test_confluent_client.py  test_deployment_mgr.py  test_fact_deployment.py  test_it_test_mgr.py  test_itg_test_mgr.py  test_lag_metrics.py  test_metrics.py  test_pool_mgr.py  test_project_cli.py  test_project_mgr.py  test_statement_mgr.py  test_table_mgr.py  test_test_mgr.py
src/shift_left/tests/ut/: BaseUT.py  a.json
src/shift_left/tests/utils/: inheritance.py  (+8 more)
(+884 files in other folders)
