[project]
name = "flink-test-harness"
version = "0.1.0"
description = "A test harness CLI to do flink statement isolated testing"
readme = "README.md"
authors = [
    { name = "jbcodeforce", email = "jerome.boyer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[project.scripts]
flink-test-harness = "flink_test_harness.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flink_test_harness"]
