[project]
name = "shift-left"
version = "0.1.0"
description = "The shift-left CLI to manage you shift-left project"
authors = [
    {name = "jbcodeforce",email = "jerome.boyer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "rich>=13.9.4",
    "typer>=0.15.2",
]


[project.scripts]
shift_left = "shift_left.cli:app"

[tool.poetry]
packages = [{include = "shift_left", from = "src"}]

[tool.poetry.scripts]
shift_left = "shift_left.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shift_left"]