[project]
name = "shift-left"
version = "0.1.4"
description = "The shift-left CLI to manage you shift-left project"
authors = [
    {name = "jbcodeforce",email = "jerome.boyer@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.2",
    "jinja2==3.1.6",
    "langchain_ollama>=0.2.3",
    "langgraph>=0.3.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pydantic>=2.6.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.3"
    # "pemja>0.4.2",
    # "confluent_flink_table_api_python_plugin>=1.20.48"
]


[project.scripts]
shift_left = "shift_left.cli:app"

[tool.poetry]
packages = [{include = "shift_left", from = "src"}]

[tool.poetry.scripts]
shift_left = "shift_left.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shift_left"]